--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,12 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         tools:context=".MainActivity">
+
+    <Button android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:text="plsWork"
+    android:onClick="plsWorkClick"/>
 
     <WebView
             android:id="@+id/myWebView"
