--- a/app/src/main/res/drawable/btncloseshape.xml
+++ b/app/src/main/res/drawable/btncloseshape.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <solid
-        android:color="#3D3C3C"/>
+        android:color="@color/colorPrimary"/>
     <corners
         android:topLeftRadius="15dp"
         android:topRightRadius="15dp"/>
