--- a/app/src/main/res/drawable/btnresizeshape.xml
+++ b/app/src/main/res/drawable/btnresizeshape.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <solid
-        android:color="#8A8A8A"/>
+        android:color="@color/colorPrimaryDark"/>
     <corners
         android:bottomRightRadius="15dp"/>
 </shape>
